--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,3 +1,7 @@
 {
-    "CommandService": "http://commands-clusterip-srv:80/api/c/platforms"
+    "CommandService": "http://commands-clusterip-srv:80/api/c/platforms",
+    "ConnectionStrings": 
+    {
+        "PlatformsConn": ""
+    }
 }
