Added commandservice rabbitMQ subscriber

--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -10,5 +10,7 @@
   "ConnectionStrings": 
     {
         "PlatformsConn": ""
-    }
+    },
+    "RabbitMQHost": "localhost",
+    "RabbitMQPort": "5672"
 }
