--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -3,5 +3,7 @@
     "ConnectionStrings": 
     {
         "PlatformsConn": ""
-    }
+    },
+    "RabbitMQHost": "rabbitmq-clusterip-srv",
+    "RabbitMQPort": "5672"
 }
