Added/configured gRPC server and new cluster ip port to handle http protocol

--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,9 +1,20 @@
 {
     "CommandService": "http://commands-clusterip-srv:80/api/c/platforms",
-    "ConnectionStrings": 
-    {
+    "ConnectionStrings": {
         "PlatformsConn": ""
     },
     "RabbitMQHost": "rabbitmq-clusterip-srv",
-    "RabbitMQPort": "5672"
+    "RabbitMQPort": "5672",
+    "Kestrel": {
+        "Endpoints": {
+            "Grpc": {
+                "Protocols": "Http2",
+                "Url": "http://platform-clusterip-srv:666"
+            },
+            "webApi": {
+                "Protocols": "Http1",
+                "Url": "http://platform-clusterip-srv:80"
+            }
+        }
+    }
 }
